[gd_scene load_steps=8 format=3 uid="uid://brdvdbqvurddf"]

[ext_resource type="Script" path="res://addons/baked_lipsync/editor_panel/timeline_item_expression.gd" id="1_7ci7d"]
[ext_resource type="Texture2D" uid="uid://dc6mhxjufj5sd" path="res://addons/baked_lipsync/images/icons/arrow_up.png" id="2_3ifp2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1dgml"]
bg_color = Color(0, 0, 0.141176, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 1, 1)
corner_radius_top_right = 6
corner_radius_bottom_right = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ks2c"]
bg_color = Color(0, 0.0493367, 0.381103, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 1, 1)
corner_radius_top_right = 6
corner_radius_bottom_right = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pgbgc"]
bg_color = Color(0, 0, 1, 0.25098)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 1, 1)
corner_radius_top_right = 6
corner_radius_bottom_right = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_28den"]
bg_color = Color(0, 0, 1, 0.25098)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.5, 1, 1)
corner_radius_top_right = 6
corner_radius_bottom_right = 6

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j4txm"]

[node name="Expression" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 64.0
offset_bottom = 32.0
script = ExtResource("1_7ci7d")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1dgml")

[node name="PanelSelected" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1ks2c")

[node name="Line" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -1.0
offset_top = -66.0
offset_right = 1.0
offset_bottom = 32.0
mouse_filter = 2
color = Color(0, 0, 1, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_spacing = -4
theme_override_font_sizes/font_size = 10
text = "expression"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
text_overrun_behavior = 3

[node name="Moving" type="Control" parent="."]
visible = false
anchors_preset = 0

[node name="Arrows" type="TextureRect" parent="Moving"]
self_modulate = Color(0, 0, 1, 1)
texture_filter = 1
layout_mode = 0
offset_left = -8.0
offset_top = -105.0
offset_right = 8.0
offset_bottom = 1.0
texture = ExtResource("2_3ifp2")
stretch_mode = 1

[node name="Line2" type="ColorRect" parent="Moving"]
layout_mode = 0
offset_left = -1.0
offset_top = -106.0
offset_right = 1.0
offset_bottom = 32.0

[node name="BtnMove" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxFlat_pgbgc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_28den")
theme_override_styles/normal = SubResource("StyleBoxEmpty_j4txm")

[connection signal="button_down" from="BtnMove" to="." method="_on_btn_move_button_down"]
[connection signal="button_up" from="BtnMove" to="." method="_on_btn_move_button_up"]
[connection signal="gui_input" from="BtnMove" to="." method="_on_btn_move_gui_input"]
